// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Menu /> > renders correctly 1`] = `
<div>
  <div
    class="Menu-root"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed Menu-appBar mui-fixed css-zanzjh-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1ygil4i-MuiToolbar-root"
      >
        <button
          aria-label="open drawer"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart MuiIconButton-sizeLarge Menu-menuButton css-1j9tf9y-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="MenuIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
            />
          </svg>
        </button>
      </div>
      <a
        href="/profile/some-id"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular css-fmeqll-MuiAvatar-root"
          style="position: absolute; cursor: pointer; right: 5px; top: 10px; text-decoration: none;"
        >
          <img
            alt="holmes's avatar"
            class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
            src="http://localhost:8080/services/member-profiles/member-photos/test%40tester.com"
          />
        </div>
      </a>
    </header>
    <nav
      class="Menu-drawer"
    >
      <div
        aria-hidden="true"
        class="MuiDrawer-root MuiDrawer-anchorLeft MuiDrawer-modal MuiModal-root MuiModal-hidden css-h2qaug-MuiModal-root-MuiDrawer-root"
        role="presentation"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root MuiModal-backdrop css-4nmryk-MuiBackdrop-root-MuiModal-backdrop"
          style="opacity: 0; visibility: hidden;"
        />
        <div
          data-testid="sentinelStart"
          tabindex="-1"
        />
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation16 MuiDrawer-paper Menu-drawerPaper MuiDrawer-paperAnchorLeft css-cyqh1t-MuiPaper-root-MuiDrawer-paper"
          style="--Paper-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12); visibility: hidden; webkit-transform: translateX(-0px); transform: translateX(-0px);"
          tabindex="-1"
        >
          <div>
            <div />
            <div
              style="display: flex; justify-content: center;"
            >
              <img
                alt="Object Computing, Inc."
                src="/img/ocicube-color.png"
                style="width: 50%;"
              />
            </div>
            <nav
              class="MuiList-root MuiList-padding Menu-listStyle css-b7dj7n-MuiList-root"
            >
              <div>
                <span
                  class="Menu-listItem"
                >
                  <a
                    class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                    href="/"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                      >
                        HOME
                      </span>
                    </div>
                  </a>
                </span>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      CHECK-IN
                    </span>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      DIRECTORY
                    </span>
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                    >
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters Mui-selected MuiListItemButton-root MuiListItemButton-gutters Mui-selected Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/guilds"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Guilds & Communities
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/people"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            People
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/teams"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Teams
                          </span>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      FEEDBACK
                    </span>
                  </div>
                </div>
              </div>
            </nav>
          </div>
        </div>
        <div
          data-testid="sentinelEnd"
          tabindex="-1"
        />
      </div>
      <div
        class="MuiDrawer-root MuiDrawer-anchorLeft MuiDrawer-docked css-slg7za-MuiDrawer-docked"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper Menu-drawerPaper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft css-1lwhjos-MuiPaper-root-MuiDrawer-paper"
          style="--Paper-shadow: none;"
        >
          <div>
            <div />
            <div
              style="display: flex; justify-content: center;"
            >
              <img
                alt="Object Computing, Inc."
                src="/img/ocicube-color.png"
                style="width: 50%;"
              />
            </div>
            <nav
              class="MuiList-root MuiList-padding Menu-listStyle css-b7dj7n-MuiList-root"
            >
              <div>
                <span
                  class="Menu-listItem"
                >
                  <a
                    class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                    href="/"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                      >
                        HOME
                      </span>
                    </div>
                  </a>
                </span>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      CHECK-IN
                    </span>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      DIRECTORY
                    </span>
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                    >
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters Mui-selected MuiListItemButton-root MuiListItemButton-gutters Mui-selected Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/guilds"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Guilds & Communities
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/people"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            People
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/teams"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Teams
                          </span>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      FEEDBACK
                    </span>
                  </div>
                </div>
              </div>
            </nav>
          </div>
        </div>
      </div>
    </nav>
    <main
      class="Menu-content"
    >
      <div />
    </main>
  </div>
</div>
`;

exports[`<Menu /> > renders correctly for admin 1`] = `
<div>
  <div
    class="Menu-root"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed Menu-appBar mui-fixed css-zanzjh-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1ygil4i-MuiToolbar-root"
      >
        <button
          aria-label="open drawer"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart MuiIconButton-sizeLarge Menu-menuButton css-1j9tf9y-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="MenuIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
            />
          </svg>
        </button>
      </div>
      <a
        href="/profile/some-id"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular css-fmeqll-MuiAvatar-root"
          style="position: absolute; cursor: pointer; right: 5px; top: 10px; text-decoration: none;"
        >
          <img
            alt="holmes's avatar"
            class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
            src="http://localhost:8080/services/member-profiles/member-photos/test%40tester.com"
          />
        </div>
      </a>
    </header>
    <nav
      class="Menu-drawer"
    >
      <div
        aria-hidden="true"
        class="MuiDrawer-root MuiDrawer-anchorLeft MuiDrawer-modal MuiModal-root MuiModal-hidden css-h2qaug-MuiModal-root-MuiDrawer-root"
        role="presentation"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root MuiModal-backdrop css-4nmryk-MuiBackdrop-root-MuiModal-backdrop"
          style="opacity: 0; visibility: hidden;"
        />
        <div
          data-testid="sentinelStart"
          tabindex="-1"
        />
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation16 MuiDrawer-paper Menu-drawerPaper MuiDrawer-paperAnchorLeft css-cyqh1t-MuiPaper-root-MuiDrawer-paper"
          style="--Paper-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12); visibility: hidden; webkit-transform: translateX(-0px); transform: translateX(-0px);"
          tabindex="-1"
        >
          <div>
            <div />
            <div
              style="display: flex; justify-content: center;"
            >
              <img
                alt="Object Computing, Inc."
                src="/img/ocicube-color.png"
                style="width: 50%;"
              />
            </div>
            <nav
              class="MuiList-root MuiList-padding Menu-listStyle css-b7dj7n-MuiList-root"
            >
              <div>
                <span
                  class="Menu-listItem"
                >
                  <a
                    class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                    href="/"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                      >
                        HOME
                      </span>
                    </div>
                  </a>
                </span>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      CHECK-IN
                    </span>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      DIRECTORY
                    </span>
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                    >
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters Mui-selected MuiListItemButton-root MuiListItemButton-gutters Mui-selected Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/guilds"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Guilds & Communities
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/people"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            People
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/teams"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Teams
                          </span>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      FEEDBACK
                    </span>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      REPORTS
                    </span>
                  </div>
                </div>
              </div>
            </nav>
          </div>
        </div>
        <div
          data-testid="sentinelEnd"
          tabindex="-1"
        />
      </div>
      <div
        class="MuiDrawer-root MuiDrawer-anchorLeft MuiDrawer-docked css-slg7za-MuiDrawer-docked"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper Menu-drawerPaper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft css-1lwhjos-MuiPaper-root-MuiDrawer-paper"
          style="--Paper-shadow: none;"
        >
          <div>
            <div />
            <div
              style="display: flex; justify-content: center;"
            >
              <img
                alt="Object Computing, Inc."
                src="/img/ocicube-color.png"
                style="width: 50%;"
              />
            </div>
            <nav
              class="MuiList-root MuiList-padding Menu-listStyle css-b7dj7n-MuiList-root"
            >
              <div>
                <span
                  class="Menu-listItem"
                >
                  <a
                    class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                    href="/"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                      >
                        HOME
                      </span>
                    </div>
                  </a>
                </span>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      CHECK-IN
                    </span>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      DIRECTORY
                    </span>
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                    >
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters Mui-selected MuiListItemButton-root MuiListItemButton-gutters Mui-selected Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/guilds"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Guilds & Communities
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/people"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            People
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/teams"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Teams
                          </span>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      FEEDBACK
                    </span>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      REPORTS
                    </span>
                  </div>
                </div>
              </div>
            </nav>
          </div>
        </div>
      </div>
    </nav>
    <main
      class="Menu-content"
    >
      <div />
    </main>
  </div>
</div>
`;

exports[`<Menu /> > renders correctly for pdl 1`] = `
<div>
  <div
    class="Menu-root"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed Menu-appBar mui-fixed css-zanzjh-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1ygil4i-MuiToolbar-root"
      >
        <button
          aria-label="open drawer"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart MuiIconButton-sizeLarge Menu-menuButton css-1j9tf9y-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="MenuIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
            />
          </svg>
        </button>
      </div>
      <a
        href="/profile/some-id"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular css-fmeqll-MuiAvatar-root"
          style="position: absolute; cursor: pointer; right: 5px; top: 10px; text-decoration: none;"
        >
          <img
            alt="holmes's avatar"
            class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
            src="http://localhost:8080/services/member-profiles/member-photos/test%40tester.com"
          />
        </div>
      </a>
    </header>
    <nav
      class="Menu-drawer"
    >
      <div
        aria-hidden="true"
        class="MuiDrawer-root MuiDrawer-anchorLeft MuiDrawer-modal MuiModal-root MuiModal-hidden css-h2qaug-MuiModal-root-MuiDrawer-root"
        role="presentation"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root MuiModal-backdrop css-4nmryk-MuiBackdrop-root-MuiModal-backdrop"
          style="opacity: 0; visibility: hidden;"
        />
        <div
          data-testid="sentinelStart"
          tabindex="-1"
        />
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation16 MuiDrawer-paper Menu-drawerPaper MuiDrawer-paperAnchorLeft css-cyqh1t-MuiPaper-root-MuiDrawer-paper"
          style="--Paper-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12); visibility: hidden; webkit-transform: translateX(-0px); transform: translateX(-0px);"
          tabindex="-1"
        >
          <div>
            <div />
            <div
              style="display: flex; justify-content: center;"
            >
              <img
                alt="Object Computing, Inc."
                src="/img/ocicube-color.png"
                style="width: 50%;"
              />
            </div>
            <nav
              class="MuiList-root MuiList-padding Menu-listStyle css-b7dj7n-MuiList-root"
            >
              <div>
                <span
                  class="Menu-listItem"
                >
                  <a
                    class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                    href="/"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                      >
                        HOME
                      </span>
                    </div>
                  </a>
                </span>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      CHECK-IN
                    </span>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      DIRECTORY
                    </span>
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                    >
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters Mui-selected MuiListItemButton-root MuiListItemButton-gutters Mui-selected Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/guilds"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Guilds & Communities
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/people"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            People
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/teams"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Teams
                          </span>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      FEEDBACK
                    </span>
                  </div>
                </div>
              </div>
            </nav>
          </div>
        </div>
        <div
          data-testid="sentinelEnd"
          tabindex="-1"
        />
      </div>
      <div
        class="MuiDrawer-root MuiDrawer-anchorLeft MuiDrawer-docked css-slg7za-MuiDrawer-docked"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper Menu-drawerPaper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft css-1lwhjos-MuiPaper-root-MuiDrawer-paper"
          style="--Paper-shadow: none;"
        >
          <div>
            <div />
            <div
              style="display: flex; justify-content: center;"
            >
              <img
                alt="Object Computing, Inc."
                src="/img/ocicube-color.png"
                style="width: 50%;"
              />
            </div>
            <nav
              class="MuiList-root MuiList-padding Menu-listStyle css-b7dj7n-MuiList-root"
            >
              <div>
                <span
                  class="Menu-listItem"
                >
                  <a
                    class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                    href="/"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                      >
                        HOME
                      </span>
                    </div>
                  </a>
                </span>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      CHECK-IN
                    </span>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      DIRECTORY
                    </span>
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                    >
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters Mui-selected MuiListItemButton-root MuiListItemButton-gutters Mui-selected Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/guilds"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Guilds & Communities
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/people"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            People
                          </span>
                        </div>
                      </a>
                      <a
                        class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-nested css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                        href="/teams"
                        tabindex="0"
                      >
                        <div
                          class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary Menu-subListItem css-rizt0-MuiTypography-root"
                          >
                            Teams
                          </span>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters Menu-listItem css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                    >
                      FEEDBACK
                    </span>
                  </div>
                </div>
              </div>
            </nav>
          </div>
        </div>
      </div>
    </nav>
    <main
      class="Menu-content"
    >
      <div />
    </main>
  </div>
</div>
`;
